--- a/Modules/Front/Resources/assets/sass/_elementForms.scss
+++ b/Modules/Front/Resources/assets/sass/_elementForms.scss
@@ -172,6 +172,13 @@
     font-weight: bold;
   }
 
+
+  .react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box {
+    width: 100px;
+  }
+  .react-datepicker__time-container {
+    width: 100px;
+  }
 }
 
 @media (min-width: 768px){
