--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -10644,6 +10644,30 @@ form.contact-form .checkbox {
   text-align: left !important;
 }
 
+.total-box-container {
+  background-color: #fff;
+  border: 1px solid #E0E0E0;
+  padding: 20px 40px;
+  text-align: left;
+}
+
+.total-box-container .title {
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 300;
+}
+
+.total-box-container .title i {
+  margin-right: 4px;
+}
+
+.total-box-container .totalBox {
+  padding: 0 20px;
+  font-size: 30px;
+  line-height: 35px;
+  font-weight: 400;
+}
+
 .map-container .leaflet-container {
   height: 300px;
   width: 100%;
