--- a/Modules/Front/Resources/assets/sass/_boxButton.scss
+++ b/Modules/Front/Resources/assets/sass/_boxButton.scss
@@ -4,7 +4,6 @@
     text-decoration: none;
   }
   .box-button-container{
-
     &:hover{
       color:$primary-color;
       text-decoration: none;
@@ -21,6 +20,8 @@
   padding: 20px 40px;
   text-align: center;
   width: 100%;
+  border-radius: 12px;
+  min-height: 105px;
   i{
     @include font(40,40,300);
     margin-bottom:5px;
