--- a/Modules/Front/Resources/assets/sass/_totalBox.scss
+++ b/Modules/Front/Resources/assets/sass/_totalBox.scss
@@ -1,8 +1,27 @@
+.total-box-container-a{
+  width: 100%;
+  color:$primary-color;
+  &:hover{
+    text-decoration: none;
+  }
+  /*.box-button-container{
+    &:hover{
+      color:$primary-color;
+      text-decoration: none;
+      border: 1px solid $primary-color;
+
+    }
+  }*/
+}
+
 .total-box-container{
+  color:$primary-color;
   background-color: #fff;
   border: 1px solid #E0E0E0;
   padding: 20px 40px;
   text-align: left;
+  border-radius: 12px;
+  min-height: 105px;
   .title{
     @include font(16,18,300);
     i{
