modal and session

--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -9816,6 +9816,14 @@ body {
   /*padding-bottom:0px;*/
 }
 
+.bootbox.modal {
+  z-index: 1100;
+}
+
+.bootbox.modal button {
+  border-radius: 20px;
+}
+
 form.contact-form {
   padding-top: 40px;
   padding-bottom: 60px;
