--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -10722,9 +10722,8 @@ form.contact-form .checkbox {
 }
 
 .box-button-container i {
-  font-size: 40px;
-  line-height: 40px;
-  font-weight: 300;
+  font-size: 40;
+  line-height: 40;
   margin-bottom: 5px;
 }
 
