--- a/Modules/Front/Resources/assets/sass/_boxButton.scss
+++ b/Modules/Front/Resources/assets/sass/_boxButton.scss
@@ -23,8 +23,8 @@
   border-radius: 12px;
   min-height: 105px;
   i{
-    font-size:40;
-    line-height: 40;
+    font-size:40px;
+    line-height: 40px;
     margin-bottom:5px;
   }
   p{
