documents and form redirect

--- a/Modules/Front/Resources/assets/sass/_elementTables.scss
+++ b/Modules/Front/Resources/assets/sass/_elementTables.scss
@@ -12,6 +12,13 @@
     }
   }
 
+  a.file-link {
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+  }
+
 
   .element-table-container-head{
     background-color: $sidebar-background-color;
