- Remove Extranet module for sub repository - Configure Front module for independant assets compilation - Clean root webpack mix file

--- a/Modules/Front/Resources/assets/sass/app.scss
+++ b/Modules/Front/Resources/assets/sass/app.scss
@@ -8,7 +8,8 @@
 //@import '~leaflet/dist/leaflet.css';
 
 // Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+@import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 //@import "~font-awesome/scss/font-awesome";
 
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
