--- a/Modules/Architect/Resources/assets/sass/material-kit/_mixins.scss
+++ b/Modules/Architect/Resources/assets/sass/material-kit/_mixins.scss
@@ -286,7 +286,7 @@
     .open > &.dropdown-toggle:focus,
     .open > &.dropdown-toggle:hover {
       background-color: $btn-color;
-      color: $text-color;
+      color: unquote($text-color);
     }
 
     &:focus,
