--- a/Modules/Architect/Resources/assets/sass/architect/app.scss
+++ b/Modules/Architect/Resources/assets/sass/architect/app.scss
@@ -6,11 +6,12 @@
 @import "variables";
 
 // Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-//@import "node_modules/react-select/dist/react-select.css";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+//@import "~font-awesome/scss/font-awesome";
+
+//@import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 @import '~leaflet/dist/leaflet.css';
-//@import '~font-awesome/scss/font-awesome';
-@import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 // Material Kit
 // https://www.creative-tim.com/product/material-kit
