--- a/Modules/Front/Resources/assets/sass/_login.scss
+++ b/Modules/Front/Resources/assets/sass/_login.scss
@@ -9,7 +9,8 @@
       margin-bottom:20px;
       .icon{
         i{
-          @include font(50,60,400);
+          font-size: 50px;
+          line-height: 60px;
         }
       }
       .title{
