--- a/Modules/Front/Resources/assets/sass/_boxButton.scss
+++ b/Modules/Front/Resources/assets/sass/_boxButton.scss
@@ -4,10 +4,11 @@
     text-decoration: none;
   }
   .box-button-container{
+
     &:hover{
       color:$primary-color;
       text-decoration: none;
-      border: 1px solid $primary-color;
+      /*border: 1px solid $primary-color;*/
 
     }
 
@@ -16,12 +17,14 @@
 .box-button-container{
   color:$secondary-color;
   background-color: #fff;
+  /*
   border: 1px solid $secondary-color;
+  */
   padding: 20px 40px;
   text-align: center;
   width: 100%;
   border-radius: 12px;
-  min-height: 105px;
+  min-height: 125px;
   i{
     font-size:40px;
     line-height: 40px;
