--- a/Modules/Front/Resources/assets/sass/layout.scss
+++ b/Modules/Front/Resources/assets/sass/layout.scss
@@ -18,8 +18,11 @@ header{
             text-align: center;
             padding: 0 25px;
             img{
+              /*
               max-height: 100%;
               max-width: 100%;
+              */
+              height:60px;
             }
           }
 
@@ -31,6 +34,11 @@ header{
             .navbar{
               border: none;
             }
+
+            &.login-header {
+              background-color: $header-logo-background-color;
+            }
+
             .menu{
               width: 40px;
               height: 40px;
