--- a/public/modules/front/css/app.css
+++ b/public/modules/front/css/app.css
@@ -9303,8 +9303,11 @@ header:first-child .row.row-header .logo-container {
 }
 
 header:first-child .row.row-header .logo-container img {
-  max-height: 100%;
-  max-width: 100%;
+  /*
+              max-height: 100%;
+              max-width: 100%;
+              */
+  height: 60px;
 }
 
 header:first-child .row.row-header .right-part-header {
@@ -9316,6 +9319,10 @@ header:first-child .row.row-header .right-part-header {
 
 header:first-child .row.row-header .right-part-header .navbar {
   border: none;
+}
+
+header:first-child .row.row-header .right-part-header.login-header {
+  background-color: #fff;
 }
 
 header:first-child .row.row-header .right-part-header .menu {
