--- a/public/modules/extranet/css/app.css
+++ b/public/modules/extranet/css/app.css
@@ -243,3 +243,15 @@ li.react-autosuggest__suggestion span {
   padding-right: 5px;
 }
 
+.visibility-settings-field .add-row-block {
+  border: 1px dashed #ccc;
+  text-align: center;
+  padding: 0px 5px;
+  margin-bottom: 0px;
+  margin-left: 50px;
+}
+
+.visibility-settings-field .modal-header {
+  padding: 15px 40px;
+}
+
