--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -15387,6 +15387,19 @@ line.links {
   pointer-events: none !important;
 }
 
+#modal-edit-item .settings-col .visibility-settings-field .setup-field-config .form-group {
+  padding-left: 0px !important;
+}
+
+#modal-edit-item .settings-col .visibility-settings-field .text-right {
+  padding: 0;
+  padding-right: 15px;
+}
+
+#modal-edit-item .settings-col .visibility-settings-field .add-row-block {
+  margin-left: 0px;
+}
+
 .translated-file {
   display: inline-block;
   padding: 10px;
