--- a/public/modules/architect/css/app.css
+++ b/public/modules/architect/css/app.css
@@ -16750,6 +16750,19 @@ ol.example li.placeholder:before {
   /** Define arrowhead **/
 }
 
+.item-content .title {
+  overflow-wrap: break-word;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.item-header .preview-icons {
+  font-size: 16px;
+  line-height: 27px;
+  display: inline-block;
+  vertical-align: top;
+}
+
 /*
 header .topnav {
   box-shadow : none !important;
