--- a/public/modules/extranet/css/front-style.css
+++ b/public/modules/extranet/css/front-style.css
@@ -10058,6 +10058,8 @@ form.contact-form .checkbox {
   line-height: 19px;
   font-weight: 600;
   padding: 0;
+  text-align: right;
+  padding-right: 30px;
 }
 
 .file-component .element-file-input-container .element-file-content {
